完成定时器和日志系统

--- a/timer/04定时器处理非活动连接.md
+++ b/timer/04定时器处理非活动连接.md
@@ -5,3 +5,6 @@
 > * 统一事件源
 > * 基于升序链表的定时器
 > * 处理非活动连接
+
+我的笔记：
+https://blog.csdn.net/qq_36372352/article/details/141822737?spm=1001.2014.3001.5501
